--- a/app/src/features/board/style.css
+++ b/app/src/features/board/style.css
@@ -25,18 +25,27 @@
 
 .columnInner {
   background-color: aliceblue;
-  padding: 3px;
+  padding: 2px;
 }
 
 .card {
-  background-color: #fff;
   margin-bottom: 4px;
-  padding: 4px;
+  padding: 6px 8px;
   position: relative;
   user-select: none;
   transition: box-shadow 100ms ease-in;
   cursor: move;
 }
+.card-0 {
+  background: #00ff0030;
+}
+.card-1 {
+  background: #ff8c0030;
+}
+.card-2 {
+  background: #ff000030;
+}
+
 .card:hover {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   transition: box-shadow 100ms ease-out;
@@ -45,11 +54,10 @@
 .card:after {
   content: "";
   position: absolute;
-  right: 10px;
-  top: calc(50% - 10px);
-  border-radius: 10px;
-  width: 20px;
-  height: 20px;
+  top: 0;
+  right: 0;
+  width: 30px;
+  height: 100%;
 }
 
 .card-0:after {
