--- a/app/src/features/board/style.css
+++ b/app/src/features/board/style.css
@@ -7,6 +7,7 @@
   padding: 16px;
   gap: 16px;
   align-items: stretch;
+  overflow: hidden;
 }
 
 .column {
@@ -15,6 +16,7 @@
   padding: 4px;
   display: grid;
   grid-template-rows: min-content 1fr;
+  overflow-y: auto;
 }
 
 .columnHeader {
