--- a/app/src/features/task-view/style.css
+++ b/app/src/features/task-view/style.css
@@ -41,3 +41,13 @@
   color: red;
   font-size: 18px;
 }
+
+.label {
+  width: 100%;
+}
+.importanceSelect {
+  width: 100%;
+}
+.taskUsersSelect {
+  width: 100%;
+}
